--- a/project/index.css
+++ b/project/index.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
 
 @import url(navbar.css);
 
@@ -7,3 +10,165 @@ body {
   margin: 0px;
 }
 
+#welcome {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 100px 0 0 0;
+}
+
+#welcome #heading {
+  font-family: 'Quicksand', sans-serif;
+  font-size: 80px;
+  margin: 0 0 20px 0;
+}
+
+#welcome #heading span {
+  font-family: 'Pacifico', cursive;
+  font-size: 80px;
+}
+
+#welcome #text {
+  font-family: 'Quicksand', sans-serif;
+  letter-spacing: 10px;
+  word-spacing: 11px;
+  text-transform: capitalize;
+}
+
+#welcome #search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin: 70px 0 0 0;
+}
+
+#welcome #search input {
+  width: 450px;
+  height: 50px;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  padding: 0 20px;
+  font-size: 20px;
+  font-family: 'Quicksand', sans-serif;
+  outline: none;
+}
+
+#welcome #search #icon {
+  font-family: "Font Awesome 6 Free";
+  font-weight: 900px;
+  font-size: xx-large;
+  margin: 0 0 0 30px;
+}
+
+#categories {
+  width: 100%;
+  height: 1000px;
+}
+
+#categories .category {
+  width: 100%;
+  height: 600px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.category .head {
+  font-family: 'Bungee Shade', cursive;
+  font-size: 54px;
+}
+
+.category .desc {
+  font-family: 'Josefin Slab', serif;
+  letter-spacing: 10px;
+}
+
+.category .products {
+  width: 100%;
+  height: 447px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  overflow: hidden;
+}
+
+.category .products .product {
+  height: 79%;
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  width: 15%;
+  position: relative;
+  left: 1400px;
+}
+.category .products .product:nth-child(1) {
+  transition: box-shadow 0.4s, transform 0.4s, left 1s ease 0.1s;
+}
+.category .products .product:nth-child(2) {
+  transition: box-shadow 0.4s ,transform 0.4s, left 1s ease 0.2s;
+}
+.category .products .product:nth-child(3) {
+  transition: box-shadow 0.4s ,transform 0.4s, left 1s ease 0.3s;
+}
+.category .products .product:nth-child(4) {
+  transition: box-shadow 0.4s ,transform 0.4s, left 1s ease 0.4s;
+}
+.category .products .product:nth-child(5) {
+  transition: box-shadow 0.4s ,transform 0.4s, left 1s ease 0.5s;
+}
+.productToggleClass {
+  left: 0px !important;
+}
+
+.category .products .product:hover {
+  box-shadow: 0 0 15px lightgrey;
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.category .products .product .image {
+  background-image: url(/images/samsung_galaxy_a73_5g_8gb_128gb_white.png);
+  height: 200px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 14px 0 0 0;
+}
+.fashion .products .product .image {
+  background-image: url(/images/Mens-Fashion.png);
+}
+.computers .products .product .image {
+  background-image: url(/images/refurb-2019-imac-215-gallery.jpeg);
+}
+.appliances .products .product .image {
+  background-image: url(/images/micro-PNG.png);
+}
+.fitness .products .product .image {
+  background-image: url(/images/dumbbell.png);
+}
+
+.category .products .product .productInfo {
+  height: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.category .products .product .productInfo span {
+  font-family: 'Josefin Slab', serif;
+  font-size: 19px;
+}
+
+.category img {
+  position: absolute;
+  transform: scale(3);
+  opacity: 0.05;
+  z-index: -1;
+  left: 25px;
+  top: 750px;
+}
