--- a/project/contactus/contactus.css
+++ b/project/contactus/contactus.css
@@ -1,15 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Changa:wght@200;300;400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&display=swap');
 
-@import url('/navbar.css');
+@import url(../navbar.css);
 
 body {
   margin: 0px;
 }
-
-
 
 /* ----------------------------------------------------------------  CONTACTUS ---------------------------------------------------------------------------------*/
 #contactus {
