--- a/project/index.css
+++ b/project/index.css
@@ -1,9 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
-
 @import url(navbar.css);
 
 body {
@@ -96,32 +90,17 @@ body {
   overflow: hidden;
 }
 
+
 .category .products .product {
   height: 79%;
   border-radius: 25px;
   display: flex;
   flex-direction: column;
-  width: 15%;
+  width: 16%;
   position: relative;
-  left: 1400px;
-}
-.category .products .product:nth-child(1) {
-  transition: box-shadow 0.4s, transform 0.4s, left 1s ease 0.1s;
-}
-.category .products .product:nth-child(2) {
-  transition: box-shadow 0.4s ,transform 0.4s, left 1s ease 0.2s;
-}
-.category .products .product:nth-child(3) {
-  transition: box-shadow 0.4s ,transform 0.4s, left 1s ease 0.3s;
-}
-.category .products .product:nth-child(4) {
-  transition: box-shadow 0.4s ,transform 0.4s, left 1s ease 0.4s;
-}
-.category .products .product:nth-child(5) {
-  transition: box-shadow 0.4s ,transform 0.4s, left 1s ease 0.5s;
-}
-.productToggleClass {
-  left: 0px !important;
+  transition: all 0.4s;
+  animation: productInitial 20s infinite linear;
+  left: 0;
 }
 
 .category .products .product:hover {
@@ -130,8 +109,10 @@ body {
   cursor: pointer;
 }
 
+
+
 .category .products .product .image {
-  background-image: url(/images/samsung_galaxy_a73_5g_8gb_128gb_white.png);
+  background-image: url(./images/samsung_galaxy_a73_5g_8gb_128gb_white.png);
   height: 200px;
   background-size: contain;
   background-repeat: no-repeat;
@@ -139,16 +120,16 @@ body {
   margin: 14px 0 0 0;
 }
 .fashion .products .product .image {
-  background-image: url(/images/Mens-Fashion.png);
+  background-image: url(./images/Mens-Fashion.png);
 }
 .computers .products .product .image {
-  background-image: url(/images/refurb-2019-imac-215-gallery.jpeg);
+  background-image: url(./images/refurb-2019-imac-215-gallery.jpeg);
 }
 .appliances .products .product .image {
-  background-image: url(/images/micro-PNG.png);
+  background-image: url(./images/micro-PNG.png);
 }
 .fitness .products .product .image {
-  background-image: url(/images/dumbbell.png);
+  background-image: url(./images/dumbbell.png);
 }
 
 .category .products .product .productInfo {
