--- a/project/admin/admin.css
+++ b/project/admin/admin.css
@@ -163,11 +163,11 @@ body {
   justify-content: flex-start;
   padding: 0px 0;
   height: 100%;
-  width: 100%;
+  width: 70%;
 }
 
 #container #body #edit form > div {
-  width: 70%;
+  width: 100%;
   display: flex;
   height: 100%;
   flex-wrap: wrap;
@@ -202,6 +202,17 @@ body {
   height: 11%;
 }
 
+#container #body #edit form input[name="uploadImage"] {
+    position: absolute;
+    top: 300px;
+    right: 150px;
+    z-index: 5;
+    background: lightgrey;
+    opacity: 0;
+    transition: all 0.4s;
+}
+
+
 #container #body #edit form input[type="submit"]:hover {
   cursor: pointer;
   opacity: 0.6;
@@ -227,12 +238,12 @@ body {
 }
 
 #container #body #edit #upload{
-  width: 35%;
+  width: 44%;
   height: 100%;
   background-color: rgb(48 48 48);
   position: absolute;
   top: 0px;
-  right: 70px;
+  right: 9px;
   z-index: 1;
   display: flex;
   align-items: center;
